# seekermail-desktop

./: .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  README.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml  bench-baseline.json  commitlint.config.cjs  deny.toml  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  cla.yml  compliance.yml  coverage.yml  feature-build.yml  license-check.yml  nightly.yml  release.yml  safety.yml
cloud/: .env.example  Cargo.toml  railway.toml
cloud/migrations/: 001_identity.sql
cloud/src/: config.rs  error.rs  main.rs
cloud/src/oidc/: mod.rs
cloud/src/routes/: me.rs  mod.rs  session.rs
cloud/src/store/: mod.rs  postgres.rs
docs/compliance/: noproxy_check_sop.md
docs/releases/: README.md  v0.7.0-rc_e5_blind_test.md  v1.0.0_ga_release_notes.md  v1.0.0_parity_report.md  v1.0.0_security_audit.md
scripts/: acceptance_gate.sh  audit_cfg.sh  check-boundaries.sh  package-mac.sh  parity_check.sh  release_check.sh  release_check_v07.sh  release_check_v10.sh  security_audit.sh  setup-model.mjs  sign_windows.sh  smoke.sh  smoke_v04.sh  smoke_v05.sh  smoke_v06.sh  smoke_v07_rc.sh  smoke_v10_ga.sh  verify_windows_sig.sh
scripts/ci/: check-licenses.mjs  generate-notice.mjs  generate-notice.sh
scripts/dev/: run-dev.sh  verify-shots.sh
src/: .gitkeep  App.tsx  font-scale-boot.ts  main.tsx  theme-boot.ts
src-tauri/: .gitkeep  Cargo.toml  build.rs  deny.toml  entitlements.plist  tauri.conf.json
src-tauri/benches/: embed_bench.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_knowledge_depth.sql  003_backfill_state.sql  004_attachment_available.sql  005_compose_drafts.sql  006_ai_matrix.sql  007_fix_decisions_today_index.sql  008_im_messages.sql  009_mail_processing_status.sql  010_query_reminder.sql  011_attachment_extraction.sql  012_attachment_fts_embedding.sql  013_deal_tags.sql  014_drop_deal_tags.sql  015_seekermail_id.sql  016_attachment_part_index.sql  017_default_sync_interval.sql  018_folder_sync_state.sql  019_outbound_ops.sql  020_mail_is_spam.sql  021_thread_summaries.sql  022_inbox_digest.sql
src-tauri/resources/: model.lock.json
src-tauri/src/: config.rs  error.rs  export.rs  lib.rs  logging.rs  main.rs  recovery.rs  state.rs  types.rs  util.rs
src-tauri/src/account/: mod.rs  oauth.rs  pkce.rs  presets.rs  refresh.rs
src-tauri/src/ai/: context.rs  fallback.rs  legal.rs  matrix.rs  mce.rs  memory.rs  mock.rs  mod.rs  provider.rs  qa_card.rs  query_detection.rs  recommended.rs  registry.rs  sales.rs  sse.rs  team_chat.rs  types.rs
src-tauri/src/ai/audit/: logger.rs  mod.rs  repo.rs  retention.rs  types.rs
src-tauri/src/ai/draft/: cleaner.rs  compose.rs  engine.rs  expiry.rs  mod.rs  prompt_builder.rs  repo.rs
src-tauri/src/ai/pipeline/: e2_pipeline.rs  e3_checker.rs  e3_gate.rs  e3_pipeline.rs  e3_rate_limiter.rs  e3_send_queue.rs  e4_classifier.rs  e4_router.rs  i3_stage.rs  mod.rs  needs_reply.rs  notifier.rs  query_expiry.rs  resume.rs  worker.rs
src-tauri/src/ai/providers/: anthropic.rs  local_onnx.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/ai/settings/: guards.rs  mod.rs  router.rs
src-tauri/src/ai/style/: injector.rs  mod.rs  profiler.rs  repo.rs  sampler.rs  validator.rs
src-tauri/src/commands/: accounts.rs  agents.rs  ai.rs  ai_recommended.rs  ai_roles.rs  data_flow.rs  draft.rs  export.rs  extraction.rs  gte.rs  identity.rs  im.rs  mail.rs  memory.rs  mod.rs  queries.rs  reindex.rs  risk.rs  search.rs  settings.rs  shell.rs  style.rs  sync_range.rs  system.rs  wipe.rs  workbench.rs
src-tauri/src/embedding/: chunker.rs  mod.rs  onnx.rs  queue.rs
src-tauri/src/events/: mod.rs  types.rs
src-tauri/src/exporter/: json_lines.rs  mbox.rs  mod.rs  zip.rs
src-tauri/src/extraction/: index.rs  mod.rs  office.rs  pdf.rs  plaintext.rs
src-tauri/src/identity/: jwks.rs  mod.rs
src-tauri/src/imap/: attachment.rs  backfill.rs  backoff.rs  dedup.rs  idle_task.rs  inbound.rs  mod.rs  outbound.rs  parser.rs  poll_task.rs  sampler.rs  scheduler.rs  sync.rs  thread.rs  throttle.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/net/: fakes.rs  live.rs  mod.rs  offline.rs
src-tauri/src/sanitize/: mod.rs  tracker_rules.json
src-tauri/src/search/: ann.rs  dsl.rs  fts5.rs  mod.rs
src-tauri/src/send/: mod.rs
src-tauri/src/storage/: account_repo.rs  attachment_repo.rs  backfill_repo.rs  blob.rs  draft_repo.rs  facade.rs  folder_sync_state_repo.rs  identity_repo.rs  im_repo.rs  inbox_digest_repo.rs  mail_repo.rs  mail_writer.rs  mod.rs  outbound_op_repo.rs  query_repo.rs  risk_event_repo.rs  settings_repo.rs  sync_state_repo.rs  thread_summary_repo.rs
src-tauri/src/vector/: hnsw.rs  mod.rs  schema.rs
src-tauri/tests/: compliance.rs
src-tauri/tests/compliance/: log_safety.rs  noproxy_egress.rs
src/hooks/: useDraftAutosave.ts  useFontScaleShortcuts.ts  useL2Shortcuts.ts  useMailShortcuts.ts  useSendMail.ts
src/i18n/: applyLocale.test.ts  applyLocale.ts  index.ts  locales.ts
src/ipc/: agents.ts  aiMatrix.ts  aiSettings.ts  client.test.ts  client.ts  dataFlow.ts  draftEvents.test.ts  errors.test.ts  errors.ts  events.test.ts  events.ts  gteStats.ts  im.ts  index.ts  legal.ts  notifications.test.ts  notifications.ts  pendingQueries.ts  recommended.ts  shell.ts  singletonBroadcast.test.ts  singletonBroadcast.ts
src/lib/: accountColor.ts  accountGate.ts  aiActivationGate.test.ts  bootToken.ts  (+36 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/bench/: gate.rs  m1_coldstart.rs  m2_list_paint.rs  m3_scroll_fps.rs  m4_keyword.rs  m5_semantic.rs  m6_memory.rs  m7_index_leak.rs  m8_attachment.rs  mod.rs  seed.rs
xtask/src/safety/: gate.rs  mod.rs  runner.rs  seed.rs
xtask/src/safety/fixtures/: initial_set.json
(+652 files in other folders)
