[package]
name = "seekermail-cloud"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false
description = "SeekerMail identity & membership cloud service (T121a)"

[[bin]]
name = "seekermail-cloud"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OIDC / JWT verification
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
