[package]
name = "seekermail"
version = "0.1.0"
description = "SeekerMail — local-first desktop email client with per-account AI agents"
authors = ["SeekerMail"]
edition = "2021"
rust-version = "1.77"
# Canonical binary for `cargo run` / `tauri build`. The bindings generator is an
# [[example]] (below), so the app crate has a single bin and the bundler is unambiguous.
default-run = "seekermail"

# The library target backs both the binary and the integration tests.
[lib]
name = "seekermail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Default binary — the Tauri app.
[[bin]]
name = "seekermail"
path = "src/main.rs"

# Bindings generator — only built with the `specta-export` feature. It is an
# [[example]] (not a [[bin]]) so the Tauri bundler never tries to copy it into the
# .app: the bundler enumerates bin targets, not examples (fixes the 1.0.1 bundle bug).
# `pnpm gen:types` runs: cargo run --features specta-export --example gen_bindings
# (Replaces the spec's build.rs export, which cannot call into the crate's own
#  type modules; see CONTRIBUTING.md "Type generation".)
[[example]]
name = "gen_bindings"
path = "examples/gen_bindings.rs"
required-features = ["specta-export"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ─── Dev convenience: load .env at startup (T015 local config) ───────────────
dotenvy = "0.15"

# ─── Tauri shell ─────────────────────────────────────────────────────────────
tauri = { version = "2", features = [] }
# OS notifications for batched E2 drafts (T083). Backend-only sender in v0.6 —
# the webview never invokes the plugin directly.
tauri-plugin-notification = "2"
# Custom `seekermail://` URL scheme for OAuth deep-link callbacks (T015 mail +
# T064 recommended-provider grants). Backend-only: the Rust handler routes the
# redirect to the right flow; the webview listens via generic Tauri events.
tauri-plugin-deep-link = "2"

# ─── Serialization & shared types (T003) ────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.20", features = ["derive", "serde", "serde_json", "uuid"] }
# Optional — pulled in only for the bindings generator (feature `specta-export`).
specta-typescript = { version = "=0.0.7", optional = true }

# ─── Error model & logging (T004) ────────────────────────────────────────────
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
tracing-appender = "0.2"

# ─── Storage (T005) ──────────────────────────────────────────────────────────
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "io-util",
    "rt",
] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"

# ─── Credentials (T006) ──────────────────────────────────────────────────────
zeroize = { version = "1", features = ["zeroize_derive"] }

# ─── Module F — BYO AI providers (T058+) ─────────────────────────────────────
# Object-safe async trait for `Box<dyn AiProviderClient>` (dev/06 §2).
async-trait = "0.1"

# ─── Module A/B — accounts, sync, attachments, sanitize (T013–T029) ──────────
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
# SeekerMail ID — verify the Google OIDC `id_token` (JWT/RS256) against Google's
# JWKS during "Sign in with Google" (T121, A6). JWKS fetch reuses `reqwest`; the
# verify path is unit-tested with a mock-IdP key, so it stays in the default build.
jsonwebtoken = "9"
regex = "1"
once_cell = "1"
walkdir = "2"
futures = "0.3"
sysinfo = "0.30"
# MIME parsing (T023). Pure-Rust, no network — safe in the default build.
mail-parser = "0.9"
# HTML sanitization (T027, B1). Allowlist cleaner over html5ever.
ammonia = "4"

# ─── Attachment text extraction (T108, A5 deepening · v0.6) ───────────────────
# Pure-Rust document parsers — no native libs, no OCR. PDF text (pdf-extract),
# spreadsheets (calamine), and OOXML .docx/.pptx via `zip` + a lightweight XML
# text strip in `extraction::office`. These stay in the default build so the
# extraction tests run under plain `cargo test`.
pdf-extract = "0.7"
calamine = "0.26"
zip = "2"

# ─── Live network adapters (IMAP/SMTP/OAuth-HTTP) ────────────────────────────
# The mail-fetch and OAuth *logic* is exercised through transport traits with
# in-memory fakes (the cards' "test seam" design: T014 §8, T015 §8, T021 §8).
# The concrete network adapters that bind `async-imap` / `lettre` / `reqwest`
# live behind this OFF-by-default feature so the default build + unit tests stay
# fast and dependency-light. Enable with `--features live-net` for a wired build.
# reqwest moved out of the optional `live-net` set in T059: the BYO AI adapters
# (Module F) are part of the default build and talk HTTP to user-configured
# endpoints. Still rustls — never openssl (packaging, 05).
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
], optional = true }
async-imap = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
], optional = true }
tokio-rustls = { version = "0.26", optional = true }
# Mozilla root set for the IMAP TLS handshake (async-imap brings no TLS of its own).
webpki-roots = { version = "1", optional = true }
battery = { version = "0.7", optional = true }

# ─── Local embedding runtime (T030, B3) ──────────────────────────────────────
# The real bge-m3 backend (ONNX Runtime + HF tokenizers) is heavy (native libs +
# a 2.2 GB model) and GPU-oriented, so — exactly like the LanceDB stack (T019) and
# the live network transports — it lives behind an OFF-by-default feature. The
# default build uses the deterministic offline embedder in `embedding/mod.rs`.
# `ort` 2.x only publishes pre-release (rc) versions on crates.io, and Cargo will
# not match a pre-release against a plain `"2"` requirement — it must be pinned to
# an explicit rc, or dependency resolution fails for the WHOLE crate (even though
# `ort` is optional and not compiled by default).
ort = { version = "=2.0.0-rc.10", optional = true } # exact-pin: rc.11+ change inputs!/try_extract API (prerelease drift guard)
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

# ─── Local generative runtime (T063, Module F) ───────────────────────────────
# The real in-process GGUF runtime (llama.cpp bindings) is heavy and
# model-dependent, so — exactly like `local-embed` (T030) — it lives behind an
# OFF-by-default feature. The default build uses the deterministic offline
# generator in `ai/providers/local_onnx.rs`.
llama-cpp-2 = { version = "0.1", optional = true }

# macOS Keychain backend (T006). Other targets use a stub that returns
# AUTH_KEYCHAIN_DENIED so the crate still compiles cross-platform for CI/dev.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

# Windows Credential Manager backend for the Keychain trait (T114). Same
# `Keychain` surface as macOS (03 §5), different OS backend. `windows-native`
# selects the Credential Manager store. macOS keeps `security-framework`; the two
# never compile together, so there is no conflict.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[features]
# Enables the standalone bindings exporter (gen_bindings example). Off in normal builds.
specta-export = ["dep:specta-typescript"]
# Wires the concrete IMAP/SMTP/OAuth network transports (see note above).
live-net = ["dep:lettre", "dep:async-imap", "dep:tokio-rustls", "dep:webpki-roots", "dep:battery"]
# Wires the real bge-m3 ONNX embedding runtime (T030). Requires the model in
# `resources/` (or `SEEKERMAIL_RESOURCE_DIR`); falls back to offline if absent.
local-embed = ["dep:ort", "dep:tokenizers"]
# Wires the real in-process GGUF generative runtime (T063). Requires a .gguf
# model manually placed in `models/` (dev/06 §1; no auto-download in v0.5).
local-llm = ["dep:llama-cpp-2"]

[dev-dependencies]
# Local HTTP mock server for the BYO AI adapter contract tests (T059–T062).
wiremock = "0.6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "io-util",
    "rt",
    "test-util",
] }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# ─── Benchmarks ──────────────────────────────────────────────────────────────
# bge-m3 embed latency (T030 §8). Runs against whichever backend is active —
# offline by default, real ONNX under `--features local-embed`.
[[bench]]
name = "embed_bench"
harness = false

[profile.release]
# Smaller, faster-to-ship release binary.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
